# Django-Starter-Template

./: .gitignore  LICENSE  README.md  TODO.md  markdown_utils.py  package-lock.json  package.json  pyproject.toml  tailwind.input.css
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_full_name.py
admin_dashboards/: admin.py  apps.py  models.py  views.py
admin_dashboards/migrations/: 0001_initial.py
admin_dashboards/templates/admin_dashboards/: base.html  dashboard_1.html
chat/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_conversation_users_online_alter_message_conversation.py
chat/templates/chat/: conversation.html
config/: asgi.py  settings.py  unfold.py  urls.py
content_management/: admin.py  markdown_utils.py  models.py  urls.py  views.py
content_management/migrations/: 0001_initial.py  0002_contentitem_is_public.py  0003_remove_contentitem_is_public_contentitem_visibility.py  0004_course.py  0005_course_blurb_course_level.py  0006_coursecontent.py  0007_course_tags_alter_coursecontent_content_item_and_more.py  0008_courseaccess.py  0009_alter_coursecontent_position.py
content_management/templates/content_management/: _base.html  content_item_detail.html  course_details.html  course_index.html
content_management/templatetags/: markdown_extras.py
dev_db/: docker-compose.yaml
news/: admin.py  models.py  urls.py  views.py
news/management/commands/: fake_news.py
news/migrations/: 0001_initial.py
news/templates/news/: _base.html  article.html  index.html
news/tests/: chat_tests.py  conftest.py
templates/: _base.html
templates/account/email/: base_message.html  base_message.txt  (+1 more)
templates/cotton/: card.html  picture.html  surface.html  youtube.html
(+5 files in other folders)
