[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels[daphne]>=4.2.2",
    "crispy-tailwind>=1.0.3",
    "django>=5.2",
    "django-allauth[socialaccount]>=65.4.1",
    "django-browser-reload>=1.18.0",
    "django-cotton>=2.0.1",
    "django-debug-toolbar>=5.0.1",
    "django-environ>=0.12.0",
    "django-grappelli>=4.0.1",
    "django-taggit>=6.1.0",
    "django-template-partials>=24.4",
    "django-unfold>=0.53.0",
    "lxml>=5.3.1",
    "markdown>=3.7",
    "markdown-headdown>=0.1.3",
    "psycopg>=3.2.6",
    "pytest-asyncio>=0.26.0",
    "pytest-django>=4.11.1",
    "pytest-env>=1.1.5",
    "pytest-playwright>=0.7.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = [
    "tests.py", "test_*.py", "*_tests.py"
]
env = ["DJANGO_ALLOW_ASYNC_UNSAFE = True"]
addopts = ["--ignore=dev_db"]